--- a/Amazon_FrameWork/test-output/old/Default suite/methods-alphabetical.html
+++ b/Amazon_FrameWork/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9da5bd">  <td>19/05/04 17:39:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@5c18298f]">feature</td> 
-  <td>main@1890187342</td>   <td></td> </tr>
-<tr bgcolor="9da5bd">  <td>19/05/04 17:39:52</td>   <td>-1613</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@5c18298f]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1890187342</td>   <td></td> </tr>
-<tr bgcolor="8cdcf4">  <td>19/05/04 17:40:24</td>   <td>29807</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RunnerFileAmazon.tearDown()[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@5c18298f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1890187342</td>   <td></td> </tr>
-<tr bgcolor="9da5bd">  <td>19/05/04 17:40:24</td>   <td>30115</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@5c18298f]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1890187342</td>   <td></td> </tr>
+<tr bgcolor="6f8e63">  <td>20/11/07 20:02:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@f0f2775]">feature</td> 
+  <td>main@64133603</td>   <td></td> </tr>
+<tr bgcolor="6f8e63">  <td>20/11/07 20:02:30</td>   <td>-515</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@f0f2775]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@64133603</td>   <td></td> </tr>
+<tr bgcolor="8fbf62">  <td>20/11/07 20:04:16</td>   <td>106013</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RunnerFileAmazon.tearDown()[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@f0f2775]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@64133603</td>   <td></td> </tr>
+<tr bgcolor="6f8e63">  <td>20/11/07 20:04:16</td>   <td>106093</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.AmazonRunnerFile.RunnerFileAmazon@f0f2775]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@64133603</td>   <td></td> </tr>
 </table>
